<resources>
    <string name="app_name">朝歌随看</string>
    <string name="version">0</string>
    <string name="app_version">SuiKan 1.3.1</string>
    <string name="test_server">suncam.demo.sunnovo-anywhere.tv</string>
    <string name="app_type">zhaoge</string>
    <string name="test_ftp_server">file.sys.sunniwell.net</string>
    <string name="test_ftp_root">flyTVcamera/</string>
    <string name="test_ftp_user">f@jb</string>
    <string name="test_ftp_password">YdjtCo</string>
    <string name="rail_server">211.157.167.78</string>
    <string name="rail_ftp_server">file.sys.sunniwell.net</string>
    <string name="rail_ftp_root">/flyTVcamera/</string>
    <string name="rail_ftp_user">f@jb</string>
    <string name="rail_ftp_password">YdjtCo</string>
    <string name="gehua_server">flycam1.flytv.com.cn</string>
    <string name="gehua_ftp_server">flycam1.flytv.com.cn</string>
    <string name="gehua_ftp_root">/var/ftp/pub/flyTVcamera/</string>
    <string name="gehua_ftp_user">admin</string>
    <string name="gehua_ftp_password">admin</string>
    <string name="gehua_edu_server">flycam2.flytv.com.cn</string>
    <string name="gehua_edu_ftp_server">flycam2.flytv.com.cn</string>
    <string name="gehua_edu_ftp_root">/var/ftp/pub/flyTVcamera/</string>
    <string name="gehua_edu_ftp_user">admin</string>
    <string name="gehua_edu_ftp_password">admin</string>
    <string name="server_port">5000</string>
    <string name="admin_user">13682473616</string>
    <string name="http_port">2028</string>
    <string name="root_directory">/sunniwell/</string>
    <string name="upgrade_directory">/sunniwell/upgrade/</string>
    <string name="upphoto_directory">/sunniwell/SnapShot/</string>
    <string name="photo_directory">/sunniwell/camera/</string>
    <string name="record_directory">/sunniwell/record/</string>
    <string name="action_exit">返回登录</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_oldpass">请输入原密码</string>
    <string name="hint_newpass">请输入新密码(6位以上字符)</string>
    <string name="hint_newpasscfm">请再次输入新密码</string>
    <string name="remPsd">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="login">登 录</string>
    <string name="forgetPsd">忘记密码?</string>
    <string name="reset_send">获取短信验证码</string>
    <string name="reset_send_norepeat">获取短信验证码(60秒内不能重复获取)</string>
    <string name="reset_commit">确定重置</string>
    <string name="register">注册</string>
    <string name="register_phoneNum">你的手机号码是:</string>
    <string name="register_next">下一步</string>
    <string name="register_submit">提交验证码</string>
    <string name="register_send">获取验证码</string>
    <string name="register_Resend">重新获取验证码</string>
    <string name="register_ok">完成注册</string>
    <string name="reg_sucss">注册成功！</string>
    <string name="reg_failed">注册失败，请稍后再试。</string>
    <string name="login_error">用户名/密码错误，请重新输入！</string>
    <string name="login_failed">登录失败，请稍后再试。</string>
    <string name="login_sucss">登录成功，欢迎使用。</string>
    <string name="scan">扫描摄像头二维码</string>
    <string name="verificode">获取验证码</string>
    <string name="camera_add_cancle">添加摄像头未完成 是否取消</string>
    <string name="camera_add_uid_error">请扫描摄像头二维码以获取摄像头序列号</string>
    <string name="camera_add_descripter_error">请输入摄像头安装位置的名称</string>
    <string name="camera_add_failed">摄像头已绑定</string>
    <string name="camera_add_timeout">添加摄像头失败，请检查网络是否正常或者摄像头序列号是否填写正确！</string>
    <string name="camera_bind_timeout">摄像头绑定超时,请检查网络是否正常</string>
    <string name="camera_have_user">此摄像头已绑定其他用户</string>
    <string name="camera_add_noexsit">绑定失败,后台未添加</string>
    <string name="camera_add_nopower">对不起,您没有添加此摄像头的权限</string>
    <string name="camera_del_failed">摄像头删除失败</string>
    <string name="camera_unbind_failed">摄像头解除绑定失败</string>
    <string name="camera_unbind_noexsit">解绑失败,后台未添加或者已禁用</string>
    <string name="camera_unbind_timeout">摄像头解除绑定超时</string>
    <string name="ok">确 定</string>
    <string name="personal_title">帐号</string>
    <string name="personal_account">我的账号</string>
    <string name="personal_password">修改密码</string>
    <string name="personal_purchased">订购产品类型</string>
    <string name="personal_camera">我的摄像头</string>
    <string name="app_setting">设置</string>
    <string name="app_about">关于</string>
    <string name="personal_setting">管理员设置</string>
    <string name="personal_exit">退出</string>
    <string name="app_title">看家宝</string>
    <string name="home_title">主页</string>
    <string name="register_title">注册</string>
    <string name="reset_title">重置密码</string>
    <string name="cam_id">摄像头ID:</string>
    <string name="cam_name">名称:</string>
    <string name="account">用户名:</string>
    <string name="svctype">订购产品类型:</string>
    <string name="appvesion">版本号:</string>
    <string name="modify">修改</string>
    <string name="finish">完成</string>
    <string name="home_config">配置</string>
    <string name="home_help">帮助</string>
    <string name="cloud_title">云空间</string>
    <string name="alarm_mg">报警信息</string>
    <string name="photo_mg">本地图片</string>
    <string name="video_mg">回看视频</string>
    <string name="alarm_photo">报警图片</string>
    <string name="alarm_video">报警视频</string>
    <string name="addCamera">添加摄像头</string>
    <string name="uuid">UUID:</string>
    <string name="cameraspeed">摄像头转速:</string>
    <string name="uuid_default">EWK984R6J2YB9H6MW7EJ</string>
    <string name="camera_motionDetection">区域布防</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="camera_status">摄像头状态</string>
    <string name="state_normal">正常</string>
    <string name="state_uncontent">未连接</string>
    <string name="state_broken">故障</string>
    <string name="state_unknow">未知</string>
    <string name="camera_switch">摄像头配置</string>
    <string name="clarity">清晰度</string>
    <string name="SD">标清</string>
    <string name="HD">高清</string>
    <string name="LD">流畅</string>
    <string name="select">选择</string>
    <string name="edit">编辑</string>
    <string name="backplayer">继续播放</string>
    <string name="add">添加</string>
    <string name="tips">提示</string>
    <string name="delete">删除</string>
    <string name="deleteall">全部清空</string>
    <string name="cancle">取消</string>
    <string name="selectall">全选</string>
    <string name="noselectall">全不选</string>
    <string name="upload">上传</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败，请稍后重试</string>
    <string name="operate_success">操作成功</string>
    <string name="operate_fail">操作失败，请稍后重试</string>
    <string name="start_date">开始日期：</string>
    <string name="end_date">结束日期：</string>
    <string name="get_passwrd">获取密码</string>
    <string name="hint_cameraUID">摄像头序列号</string>
    <string name="hint_phoneNo1">请输入11位手机号码</string>
    <string name="hint_phoneNo2">请输入注册时所用手机号码</string>
    <string name="hint_cameraDesc">摄像头安装位置的名称</string>
    <string name="camera_send">发送方式</string>
    <string name="send_direct">直连</string>
    <string name="send_forward">转发</string>
    <string name="play_decord">加密方式</string>
    <string name="decord">普通</string>
    <string name="encord">加密</string>
    <string name="add_check">绑定验证</string>
    <string name="check">验证</string>
    <string name="no_check">不验</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="evenote_title">随看视频共享</string>
    <string name="refresh">刷新</string>
    <string name="camere_motion_open">布防开</string>
    <string name="camere_motion_close">布防关</string>
    <string name="motion_keyopen">一键布防</string>
    <string name="motion_keyclose">一键撤防</string>
    <string name="motion_keyopen_confirm">确定一键布防吗?</string>
    <string name="motion_keyclose_confirm">确定一键撤防吗?</string>
    <string name="motion_open">开启</string>
    <string name="motion_close">关闭</string>
    <string name="camera_connecting">正在连接....</string>
    <string name="camera_offine">摄像头断线，无法监看</string>
    <string name="camera_unbind">摄像头被删除，请退出播放</string>
    <string name="camera_init_finish">摄像头初始化完毕！</string>
    <string name="speak_init_finish">对讲初始化完毕！</string>
    <string name="speak">说话</string>
    <string name="cloud">云空间</string>
    <string name="camera">抓拍</string>
    <string name="flip">翻转</string>
    <string name="share">分享</string>
    <string name="motion">布防</string>
    <string name="motionapp">应用</string>
    <string name="motionadd">添加</string>
    <string name="time_0">00:00:00</string>
    <string name="ask_motionDetection">是否关闭区域布防</string>
    <string name="ask_flip">画面将翻转180度</string>
    <string name="motionDetection_is_full">最多只能添加4个</string>
    <string name="add_motionDetection_fail">添加失败 请重试</string>
    <string name="tell_open_motionDetection">请先开启移动布防</string>
    <string name="photo_first">已经是第一张了！</string>
    <string name="photo_end">已经是最后一张了！</string>
    <string name="state_down">已下载</string>
    <string name="state_up">已上传</string>
    <string name="state_noup">未上传</string>
    <string name="state_new">最新</string>
    <string-array name="security_questions">
        <item>您的学号是什么？</item>
        <item>您的班主任叫什么名字？</item>
        <item>您的宠物叫什么？</item>
        <item>您的爱人叫什么？</item>
    </string-array>
    <string-array name="camera_speed">
        <item>一倍速</item>
        <item>二倍速</item>
        <item>三倍速</item>
        <item>四倍速</item>
    </string-array>
    <string-array name="video_type">
        <item>回看视频</item>
        <item>报警视频</item>
    </string-array>
    <string-array name="photo_type">
        <item>报警图片</item>
        <item>本地图片</item>
    </string-array>
    <string name="hint_newphone">请输入手机号码</string>
    <string name="hint_newpasswd">请输入密码(6位以上字符)</string>
    <string name="hint_usercode">请输入验证码</string>
    <string name="hint_newpasswdcfm">请再次输入密码</string>
    <string name="hint_question">请选择密保问题</string>
    <string name="hint_answer">请输入密保问题答案</string>
    <string name="hint_psderror">两次输入的密码不一致，请重新输入！</string>
    <string name="hint_speed">请选择转速</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_smscode">请输入短信验证码</string>
    <string name="epg_invail">epg地址非法 必须以http://开头</string>
    <string name="ois_invail1">ois地址非法 必须以http://开头</string>
    <string name="ois_invail2">ois地址非法 请输入正确ip</string>
    <string name="server_invail">server地址非法 </string>
    <string name="ois_null">ois不能为空</string>
    <string name="epg_null">epg不能为空</string>
    <string name="server_null">server不能为空</string>
    <string name="phone">手机号码：</string>
    <string name="psw_null">密码不能为空！</string>
    <string name="pswcfg_null">确认密码不能为空！</string>
    <string name="phone_null">手机不能为空！</string>
    <string name="user_null">用户名不能为空！</string>
    <string name="phone_invalid">手机号码无效！</string>
    <string name="psw_invalid">两次密码不一致！</string>
    <string name="password_length_error">密码长度必须大于6个字符！</string>
    <string name="oldpsw_null">初始密码不能为空！</string>
    <string name="newpsw_null">新密码不能为空！</string>
    <string name="commit_ok">提交成功！</string>
    <string name="refresh_time">刷新时间:</string>
    <string name="your_camera">你的摄像头[</string>
    <string name="your_camera_alter">]检测到异常!</string>
    <string name="camera_offline_noplay">摄像头断线，无法监看!</string>
    <string name="select_camera">选择摄像头</string>
    <string name="wifi_info">摄像头连接的Wi-Fi</string>
    <string name="wifi_pwd_hint">请输入wifi密码</string>
    <string name="wifi_tip">请接通摄像头电源，等待摄像头语音提示“已准备连接网络”后，再点击下一步</string>
    <string name="camera_finding">正在查找摄像头,请稍等...</string>
    <string name="camera_findfail">无法搜索到摄像头,请重试!</string>
    <string name="camera_find_retry">重新搜索</string>
    <string name="bind">绑定</string>
    <string name="stop">停止</string>
</resources>