<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/viewFliper_cameraadd"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="#f0f0f0"
          android:gravity="center_horizontal"
          >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/titleBar_height"
            android:background="@color/head"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/white"
                android:text="@string/addCamera"
                android:layout_centerInParent="true"
                />
        <Button
                android:id="@+id/btn_addCam_back"
                android:layout_width="55dp"
                android:layout_height="33dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_back"
                />
    </RelativeLayout>
    <EditText
            android:id="@+id/input_addCam_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_cameraUID"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            android:focusable="false"
            android:enabled="false"
            />
    <EditText
            android:id="@+id/input_addCam_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_cameraDesc"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            />
    <Button
            android:id="@+id/btn_addCam_scan"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginBtn"
            android:layout_marginRight="@dimen/marginBtn"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/orange"
            />
    <Button
            android:id="@+id/btn_addCam_ok"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginBtn"
            android:layout_marginRight="@dimen/marginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bigBtn_height"
            android:background="@color/orange"
            />
</LinearLayout>