<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewFliper_cameraaddwifi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:background="@color/head" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/camera_switch"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:id="@+id/btn_addCamWifi_back"
            android:layout_width="55dp"
            android:layout_height="33dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/marginLR"
            android:background="@drawable/btn_back" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- 填写wifi密码 -->
        <LinearLayout
            android:id="@+id/addCamWifi_configview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone"
             >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:text="@string/wifi_info"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/normal_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/config_line_height"
                android:background="@drawable/line_bg_top"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/marginLR"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                   	android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_wifi" />

                <TextView
                    android:id="@+id/wifiName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/marginLR"
                    android:layout_weight="8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:visibility="invisible" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/config_line_height"
                android:layout_marginBottom="@dimen/marginBottom"
                android:background="@drawable/line_bg_bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="@dimen/marginLR"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_pwd" />

                <EditText
                    android:id="@+id/wifiPwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/marginLR"
                    android:layout_weight="8"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:hint="@string/wifi_pwd_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

             

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:src="@drawable/vertical_line"
                        android:layout_gravity="center_vertical"
                        android:tag="explor" />

                    <ImageView
                        android:id="@+id/btn_seeWifiPwd"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/marginLR"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_see_off"
                        android:tag="icon_see_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/rememberWifi_checkbox"
                    android:layout_width="@dimen/checkbox"
                    android:layout_height="@dimen/checkbox"
                    android:layout_marginRight="@dimen/marginLR"
                    android:button="@drawable/cst_checkbox"
                    />
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remPsd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size"
                    />
            </LinearLayout>
            
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/marginEditTop"
			    android:text="@string/wifi_tip"
			    android:textColor="@color/viewfinder_laser"
			    android:textSize="@dimen/normal_text_size" />

            <Button
                android:id="@+id/btn_addCamWifi_next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bigBtn_height"
                android:layout_marginTop="@dimen/marginEditTop"
                android:background="@color/orange"
                android:text="@string/register_next"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size" >
            </Button>
        </LinearLayout>

        
        <!-- 正在搜索摄像头 -->
        <RelativeLayout
            android:id="@+id/addCamWifi_connectingview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:visibility="gone"
             >

            
            <ImageView 
                android:id="@+id/camera_finding"
                android:layout_width="250dp"
                android:layout_height="215dp"
                android:scaleType="fitCenter"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/marginEditTop"
                />
            
            
             <TextView 
                android:layout_alignParentTop="true"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/marginEditTop"
		        android:text="@string/camera_finding"
		        android:textColor="@color/red"
		        android:textSize="@dimen/normal_text_size" 
		        android:gravity="center_horizontal"
		        />
             <Button
                android:id="@+id/btn_addCamWifi_searchStop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bigBtn_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/marginEditTop"
                android:background="@color/orange"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                />
        </RelativeLayout>
        
        <!-- 搜索摄像头失败 -->
        <RelativeLayout
            android:id="@+id/addCamWifi_failview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:visibility="gone"
             >
             
             <!-- <LinearLayout
               	android:layout_alignParentTop="true"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/marginEditTop"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal" >
                    <ImageView 
                        
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_alarm"
                        android:scaleType="fitCenter"
                        android:layout_marginRight="5dp"
                        />
                    
                     <TextView 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/camera_findfail"
				        android:textColor="@color/red"
				        android:textSize="@dimen/normal_text_size" 
				        android:layout_gravity="center"
				        />
                    
                </LinearLayout>
            </LinearLayout> -->
            
            <TextView 
                android:layout_alignParentTop="true"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/marginEditTop"
		        android:text="@string/camera_findfail"
		        android:textColor="@color/red"
		        android:textSize="@dimen/normal_text_size" 
		        android:gravity="center_horizontal"
		        />
            <ImageView 
                android:layout_width="250dp"
                android:layout_height="215dp"
                android:src="@drawable/camera_findfail"
                android:scaleType="fitCenter"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/marginEditTop"
                />
            

            <Button
                android:id="@+id/btn_addCamWifi_retry"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/marginEditTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bigBtn_height"
                android:background="@color/orange"
                android:text="@string/camera_find_retry"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size" />
             
        </RelativeLayout>
        
		<!-- 搜索到的摄像头列表 -->
		
		<RelativeLayout 
		    android:id="@+id/addCamWifi_resultview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
		    android:padding="10dp"
		    
		    >
		    
		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical"
	             >
                
		       <TextView 
        			android:id="@+id/tip_select_camera"
			        android:text="@string/select_camera"
			        android:textColor="@color/text_gray"
			        android:textSize="@dimen/normal_text_size"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="20dp"
			        android:visibility="gone"
		        />

		       <TextView
		           android:id="@+id/tip_finding_camera"
			       android:layout_width="fill_parent"
			       android:layout_height="wrap_content"
			       android:layout_marginBottom="20dp"
		           android:gravity="center_horizontal"
		           android:text="@string/camera_finding"
		           android:textColor="@color/red"
		           android:textSize="@dimen/normal_text_size"
		           android:visibility="gone"
		           />
	
	            <ListView
	                android:id="@+id/addCamWifi_list"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:divider="@null"
	                android:dividerHeight="10dp"
	                android:footerDividersEnabled="false" >
	            </ListView>
	
	           
	        </LinearLayout>
		    <Button
                android:id="@+id/btn_addCamWifi_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bigBtn_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/marginEditTop"
                android:background="@color/orange"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size" 
                android:visibility="gone"
                />
		    <Button
                android:id="@+id/btn_addCamWifi_bind"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bigBtn_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/marginEditTop"
                android:background="@color/orange"
                android:text="@string/bind"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:visibility="gone"
                />
		    <Button
                android:id="@+id/btn_addCamWifi_stop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bigBtn_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/marginEditTop"
                android:background="@color/orange"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:visibility="gone"
                />
		    
		</RelativeLayout>
		
        
    </FrameLayout>

</LinearLayout>